--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <li>  <a href="#" class=" nav-button brand-logo" ><font size="5" >THE DEPARTMENT OF THE TREASURY</font></a></li> 
 
-      <li class="nav-item"><a  class="left-underline nav-button"  href="index.html">CONTACT</a></li>
+      <li class="nav-item"><a  class="left-underline nav-button"  href="contact.html">CONTACT</a></li>
       <li class="nav-item"><a  class="left-underline nav-button" href="resume.html">RESUME</a></li>
       <li class="nav-item"><a  class="left-underline nav-button" href="work.html">WORK</a></li>
       <li class="nav-item"><a  class="left-underline nav-button"  href="index.html">HOME</a></li>
