--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,9 @@
   
 <div class="container" align="center">
    <P>   <FONT SIZE="6.5" COLOR="BLUE" ALIGN="CENTER"> CONTACT </FONT> </P>
-   <li> <font size="5" align="center">Mail: 2729 Woodlake road, Bowie Maryland, 20721 </font><li>
-   <li> <font size="5" align="center">Phone: 240-475-8607</font></li>
-   <li><a href="mailto:sphan8018@gmail.com? subject=subject text">Email: sphan8018@gmail.com </a></li>
+   <li> <font size="5" align="center">Mail: 2729 Woodlake road, Bowie Maryland, 20721 </font><li><br>
+   <li> <font size="5" align="center">Phone: 240-475-8607</font></li><br>
+   <li><a href="mailto:sphan8018@gmail.com? subject=subject text"><font size="5">Email: sphan8018@gmail.com </font></a></li><br>
    </div>  
 <div align="center">
       <h4> How to find Degital Team office </h4>
