--- a/contact.html
+++ b/contact.html
@@ -44,17 +44,13 @@
 <br>
   
 <div class="container" align="center">
-   <P>   <FONT SIZE="6.5" COLOR="BLUE" ALIGN="CENTER"> CONTACT </FONT> </P>
+   <P>   <h4 ALIGN="CENTER"> CONTACT </h4> </P>
+  <p> <font size="5" align="center"> SON PHAN </FONT></P> <BR>
    <li> <font size="5" align="center">Mail: 2729 Woodlake road, Bowie Maryland, 20721 </font><li><br>
    <li> <font size="5" align="center">Phone: 240-475-8607</font></li><br>
    <li><a href="mailto:sphan8018@gmail.com? subject=subject text"><font size="5">Email: sphan8018@gmail.com </font></a></li><br>
    </div>  
-<div align="center">
-      <h4> How to find Degital Team office </h4>
-      <img src="1750map.png" alt="treasurybuilding"  width="1000"
-     height="341">
-
-  </div>   
+   
 
  <div class="footer-copyright" >
       
