--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
       
 
   </div>   
+  <div align="center">
+      <h4> How to find Degital Team office </h4>
+      <img src="1750map.png" alt="treasurybuilding"  width="1000"
+     height="341">
+
+  </div>
 
  <div class="footer-copyright" >
       
