--- a/contact.html
+++ b/contact.html
@@ -46,16 +46,12 @@
 <div class="container" align="center">
    <P>   <h4 ALIGN="CENTER"> CONTACT </h4> </P>
   <p> <font size="5" align="center"> SON PHAN </FONT></P> <BR>
-   <li> <font size="5" align="center">Mail: 2729 Woodlake road, Bowie Maryland, 20721 </font><li><br>
-   <li> <font size="5" align="center">Phone: 240-475-8607</font></li><br>
-   <li><a href="mailto:sphan8018@gmail.com? subject=subject text"><font size="5">Email: sphan8018@gmail.com </font></a></li><br>
+    <font size="5" align="center">Mail: 2729 Woodlake road, Bowie Maryland, 20721 </font><br>
+    <font size="5" align="center">Phone: 240-475-8607</font><br>
+   <a href="mailto:sphan8018@gmail.com? subject=subject text"><font size="5">Email: sphan8018@gmail.com </font></a><br>
    </div>  
    
 
- <div class="footer-copyright" >
-      
-      <p >  Son Phan Web was designed in Spring 2020  </p> 
-     
-</div>
+
 </body>
 </html>
