--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
   </div>   
   <div align="center">
-      <h4> How to find Degital Team office </h4>
+      <h4> How to find Digital Team office </h4>
       <img src="1750map.png" alt="treasurybuilding"  width="1000"
      height="341">
 
