--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <tr>
 <div class="navbar1" align="center">
  <ul class="navbar-container">
-<P> <font size="6" color="Yellow">SON PHAN'S INTERNSHIP IN SPRING 2020 </font> </P>
+<P> <font size="6" color="Yellow">SON PHAN'S INTERNSHIP - SPRING 2020 </font> </P>
 </ul>
   </div>
 </tr>
@@ -56,11 +56,11 @@
     <div class="col-4">
       <a href="https://home.treasury.gov/"><h4>THE DEPARTMENT OF THE TREASURY</h4></a>
 
-<p><font size="5"> The Department of the Treasury has two majors: Departmental Offices and the operating bureaus. Its basic functions include managing Federal finances, collecting taxes, duties and monies paid to and due to the U.S and paying all bills of the U.S, currency and coinage, managing Government accounts and the public debt, supervising national banks and thrift institutions, advising on domestic and international financial, monetary, economics, trade and tax policy, enforcing Federal finance and tax law, investigating and prosecuting tax evaders, counterfeiters, and forgers. It plays important roles to manage the financial and currency market along with Federal Reserve, and the fiscal budget for the government's activities.</font> </p>
+<p><font size="5"> The Department of the Treasury has two major divisions: Departmental Offices and the operating bureaus. Its basic functions include managing Federal finances, collecting taxes, duties and monies paid to and due to the U.S and paying all bills of the U.S. currency and coinage, managing Government accounts and the public debt, supervising national banks and thrift institutions, providing expert advice on domestic and international financial, monetary, economics, trade and tax policy, enforcing Federal finance and tax law, and investigating and prosecuting tax evaders, counterfeiters, and forgers. It plays important roles managing the financial and currency market along with the Federal Reserve, and managing the fiscal budget for the government's activities.</font> </p>
  
  </div>
     <div class="col-6" align="center">
-      <h4>TREASURY CHART</h4>
+      <h4>TREASURY ORGANIZATIONAL CHART</h4>
       <img src="organizational-chart.png" alt="organizational chart" >
     </div> 
   </div>
@@ -152,7 +152,7 @@
 
     <div class="col-6">
 <font size="6" color="blue">Son Phan </font>
-<font size="5">OCIO Intern at digital team </font>
+<font size="5">OCIO Intern on the Digital Team </font>
       <img src="son3.jpg"  width="500"
      height="500">
 
